Fix subheading spacing

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -423,8 +423,12 @@ $secondary-item-font-size: rem(15px);
   padding-left: spacing();
 
   .Text {
-    @include text-style-subheading;
+    font-size: font-size(subheading);
     color: var(--p-text-subdued, color('ink', 'lighter'));
+
+    @include when-typography-not-condensed {
+      font-size: font-size(subheading, large-screen);
+    }
   }
 
   .Action {
